@@ -21,3 +21,4 @@
 * Initialize dataframe from an array which looks like [{a: 10, b: 20}, {a: 11, b: 12}]. Works for parsed JSON.
 * Over-riding vectors in DataFrame will still preserve order.
 * Any re-assignment of rows in #each_row and #each_row_with_index will reflect in the DataFrame.
+* Added #to_a and #to_json to DataFrame.
